[package]
name = "axum-redis-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DB 관련
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "uuid", "chrono"] }

# cache
tower = "0.4"
redis = { version = "0.32.2", features = ["tokio-comp", "aio"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3.31"

# pretty print
colored = "2"



[dev-dependencies]
tower = { version = "0.4", features = ["util"]}
mockall = "0.12"
sqlx = { version = "0.7", features = ["sqlite", "postgres"] }